--- a/umap/static/umap/vars.css
+++ b/umap/static/umap/vars.css
@@ -16,6 +16,7 @@
     --color-darkCyan: #009099;
     --color-veryDarkCyan: #046460;
     --color-red: #c60f13;
+    --color-darkOrange: #b36200;
     --color-darkRed: #5b2a2a;
 
     --background-color: var(--color-light);
