fix: better way to wait for panel transition end
Before this change, we had a corner case when closing
and reopening very fast a panel (example when a full redraw of a
feature is needed, eg. switching from route to normal line),
because the panel was considered closed, but the CSS transition
was never run as the panel was in fact already in its final
position.

Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/static/umap/map.css
+++ b/umap/static/umap/map.css
@@ -25,6 +25,13 @@ html[dir="rtl"] .leaflet-tooltip-pane>* {
 }
 
 /* *********** */
+/*   Generic   */
+/* *********** */
+.with-transition {
+    transition: all var(--transition);
+}
+
+/* *********** */
 /* Map details */
 /* *********** */
 #map {
@@ -1069,7 +1076,7 @@ ul.photon-autocomplete {
     font-weight: bold;
 }
 
-.leaflet-overlay-pane > svg {
+.leaflet-overlay-pane>svg {
     z-index: var(--zindex-orphan-marker);
 }
 
