--- a/umap/static/umap/vars.css
+++ b/umap/static/umap/vars.css
@@ -64,7 +64,9 @@
     --zindex-orphan-marker: 401;
 
     --block-shadow: 0 1px 7px var(--color-mediumGray);
+    --transition: 300ms;
 }
+
 .dark {
     --background-color: var(--color-darkGray);
     --text-color: #efefef;
