fix: set type button for edit filter icons
Co-authored-by: Yohan Boniface <yohanboniface@free.fr>

--- a/umap/static/umap/css/bar.css
+++ b/umap/static/umap/css/bar.css
@@ -267,7 +267,7 @@
     height: var(--control-size);
 }
 
-.umap-edit-bar button {
+.umap-edit-bar button[type="button"] {
     padding: 0;
     border-radius: 0;
 }
