fix: set type button for edit filter icons
Co-authored-by: Yohan Boniface <yohanboniface@free.fr>

--- a/umap/static/umap/map.css
+++ b/umap/static/umap/map.css
@@ -525,7 +525,7 @@ ul.photon-autocomplete {
 /* ********************************* */
 /*     Help Lightbox                 */
 /* ********************************* */
-.umap-help-button {
+.umap-help-button[type="button"] {
     display: inline-block;
     width: 16px;
     height: 16px;
