wip: allow to change target of new filter

--- a/umap/static/umap/css/form.css
+++ b/umap/static/umap/css/form.css
@@ -94,6 +94,13 @@ select {
     border-width: 1px;
 }
 
+.dark select[disabled],
+select[disabled] {
+    background-color: var(--color-mediumGray);
+    color: var(--color-lightGray);
+    cursor: not-allowed;
+}
+
 select[multiple="multiple"] {
     height: auto;
 }
