wip: display filter edit button aligned right
Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/static/umap/css/icon.css
+++ b/umap/static/umap/css/icon.css
@@ -131,7 +131,7 @@ html[dir="rtl"] .icon {
 
 .icon-drag {
     background-position: calc(var(--tile) * 3) calc(var(--tile) * 3);
-    cursor: move;
+    cursor: grab;
     float: inline-end;
     visibility: hidden;
 }
