wip: change anonymous button color in top bar
Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/static/umap/css/bar.css
+++ b/umap/static/umap/css/bar.css
@@ -25,6 +25,7 @@
     filter: invert(.5);
 }
 
+.umap-main-edit-toolbox .soft-round,
 .umap-main-edit-toolbox .round {
     display: inline-block;
     height: 32px;
