wip: allow to login from the map
Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/static/umap/css/bar.css
+++ b/umap/static/umap/css/bar.css
@@ -200,13 +200,13 @@
     padding-inline-end: 10px;
 }
 
-.umap-main-edit-toolbox .umap-user:hover {
-    text-decoration: underline;
+.umap-main-edit-toolbox .flat.umap-user:hover {
+    text-decoration: none;
 }
 
 .umap-main-edit-toolbox .umap-user:after {
     content: '|';
-    padding-inline-start: 20px;
+    padding-inline-start: var(--text-margin);
     display: inline-block;
     /* Prevents underline on hover. */
 }
