wip: display anonymous status in permissions panel
Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/static/umap/map.css
+++ b/umap/static/umap/map.css
@@ -47,6 +47,11 @@ html[dir="rtl"] .leaflet-tooltip-pane>* {
     display: inline-block;
 }
 
+.aplat {
+    padding: var(--medium-box-padding);
+    margin-bottom: var(--box-margin);
+}
+
 /* *********** */
 /* Map details */
 /* *********** */
