--- a/umap/static/umap/css/form.css
+++ b/umap/static/umap/css/form.css
@@ -145,6 +145,7 @@ input[type="submit"] {
     border: 1px solid var(--color-veryDarkGray);
 }
 
+.dark .anonymous,
 .dark .button.anonymous,
 .dark [type="button"].anonymous {
     background-color: var(--color-veryDarkViolet);
@@ -196,6 +197,7 @@ button.round {
     border: 0.5px solid rgba(153, 153, 153, 0.40);
 }
 
+.soft-round,
 .dark button.soft-round,
 button.soft-round {
     border-radius: var(--border-radius);
