chore: rename icon-caption to icon-info
Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/static/umap/css/icon.css
+++ b/umap/static/umap/css/icon.css
@@ -80,7 +80,7 @@ html[dir="rtl"] .icon {
     background-position: var(--tile) calc(var(--tile) * 6);
 }
 
-.icon-caption {
+.icon-info {
     background-position: calc(var(--tile) * 4) var(--tile);
 }
 
