chore: rework browser filters box style
Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/templates/umap/css.html
+++ b/umap/templates/umap/css.html
@@ -34,5 +34,6 @@
 <link rel="stylesheet" href="{% static 'umap/css/importers.css' %}" />
 <link rel="stylesheet" href="{% static 'umap/css/tableeditor.css' %}" />
 <link rel="stylesheet" href="{% static 'umap/css/bar.css' %}" />
+<link rel="stylesheet" href="{% static 'umap/css/browser.css' %}" />
 <link rel="stylesheet" href="{% static 'umap/theme.css' %}" />
 {% endautoescape %}
