--- a/umap/static/umap/css/form.css
+++ b/umap/static/umap/css/form.css
@@ -192,6 +192,7 @@ button.flat:hover,
 }
 
 .dark button.round,
+[type="button"].round,
 button.round {
     border-radius: 20px;
     border: 0.5px solid rgba(153, 153, 153, 0.40);
