--- a/umap/static/umap/map.css
+++ b/umap/static/umap/map.css
@@ -54,6 +54,13 @@ html[dir="rtl"] .leaflet-tooltip-pane>* {
     border: 1px solid var(--color-accent);
 }
 
+.with-toolbox {
+    display: flex;
+    justify-content: space-between;
+    padding-inline-start: var(--medium-box-padding);
+    padding-inline-end: var(--medium-box-padding);
+}
+
 /* *********** */
 /* Map details */
 /* *********** */
