--- a/umap/static/umap/vars.css
+++ b/umap/static/umap/vars.css
@@ -19,7 +19,8 @@
     --color-darkOrange: #b36200;
     --color-darkRed: #5b2a2a;
     --color-lightViolet: #c043ff;
-    --color-veryDarkViolet: #472e54;
+    --color-veryDarkerViolet: #472e54;
+    --color-veryDarkViolet: #562f6b;
 
     --background-color: var(--color-light);
     --color-accent: var(--color-brightCyan);
