chore: refactor (once again) fields and filters management
Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/static/umap/css/browser.css
+++ b/umap/static/umap/css/browser.css
@@ -147,7 +147,7 @@
     background-color: var(--background-color);
 }
 
-.umap-browser details.filters [data-ref="addFilter"] {
+.umap-browser details.filters [data-ref="manageFilters"] {
     position: absolute;
     top: 0;
     right: 0;
