--- a/umap/static/umap/css/icon.css
+++ b/umap/static/umap/css/icon.css
@@ -196,9 +196,12 @@ html[dir="rtl"] .icon {
     background-position: 0 calc(var(--tile) * 8);
 }
 
-
 .icon-filters {
     background-position: 0px var(--tile);
+}
+
+.icon-filters-empty {
+    background-position: calc(var(--tile) * 8) calc(var(--tile) * 8);
 }
 
 .icon-forward {
