--- a/umap/templates/umap/user_map_table.html
+++ b/umap/templates/umap/user_map_table.html
@@ -1,8 +1,8 @@
+{% load i18n %}
 <div class="wrapper">
   <div class="row">
     <div class="table-header">
       <form action="{{ request.get_full_path }}" method="get">
-        <span>
           <label class="sr-only" for="q">
             {{ label_title }}
           </label>
@@ -11,7 +11,12 @@
                  type="search"
                  placeholder="{{ label_title }}"
                  value="{{ request.GET.q|default:"" }}" />
-        </span>
+          <select name="tags">
+            <option value="">{% trans "Any category" %}</option>
+            {% for value, label in UMAP_TAGS %}
+            <option value="{{ value }}" {% if request.GET.tags == value %}selected{% endif %}>{{ label }}</option>
+            {% endfor %}
+          </select>
         <input type="submit" value="{{ submit_label }}" />
       </form>
       {% if maps.object_list|length > 1 %}
