fix: use white color when input is invalid (darkred bg)
Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/static/umap/css/form.css
+++ b/umap/static/umap/css/form.css
@@ -295,6 +295,7 @@ input[type="file"]+.error {
 input[value]:invalid {
     border-color: var(--color-red);
     background-color: var(--color-darkRed);
+    color: var(--color-light);
 }
 
 .dark input,
